--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,18 @@
+:root {
+    --red: #c73b0f;
+    --rose-900: #260f08;
+    --rose-500: #87635a;
+    --rose-400: #ad8a85;
+    --rose-300: #fcf8f6;
+    --rose-100: #f5eeec;
+    --green: #1ea575;
+    --white: #ffffff;
+
+    --regular: 400;
+    --medium: 500;
+    --semiBold: 600;
+    --bold: 700;
+}
 *{
     box-sizing: border-box;
 }
@@ -19,3 +34,47 @@ ul{
     margin-top: 0;
     margin-bottom: 0;
 }
+.body{
+    background-color: var(--rose-100);
+}
+.header{
+    width: 100%;
+    height: 90px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.main{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    padding: 0 200px;
+    gap: 50px;
+}
+.box{
+    border-radius: 10px;
+    background-color: var(--white);
+    width: 100%;
+    height: 560px;
+    padding: 20px;
+}
+.image{
+    margin-bottom: 15px;
+}
+.info-card p {
+    margin: 0;
+    margin-bottom: 10px;
+}
+.price, .name-product{
+    color: var(--red);
+    font-size: 16px;
+    font-weight: var(--semiBold);
+    line-height: auto;
+}
+.name-product{
+    color: black;
+}
+.sugarless{
+    color: var(--rose-500);
+}
+
+
